--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -410,7 +410,7 @@ $(function(){
                 <ul>
                     <li><a href="${ufbDomain}/family/setting/account_index.htm"><b class="icon01"></b>账户信息</a></li>
                     <li><a class="current" href="${ufbDomain}/family/setting/password_index.htm"><b class="icon02"></b>密码设置</a></li>
-                    <li><a href="${ufbDomain}/family/setting/bankcard_index.htm"><b class="icon03"></b>银行卡管理</a></li>
+                    <li><a href="${ufbDomain}/family/setting/card_index.htm"><b class="icon03"></b>我的银行卡</a></li>
                     <li><a href="${ufbDomain}/family/ufb/autotrade_index.htm"><b class="icon04"></b>自动理财设置</a></li>
                 </ul>
             </div>
