--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/index.vm
@@ -127,7 +127,7 @@ $(function(){
 									<input id="loginpwd" name="loginpwd" maxlength="20" type="password">
 								</li>
                                 <li class="li03"><img src="${staticDomain}/family/images/img_10.png">
-									<input id="verifycode" name="verifycode" maxlength="4" maxlength="4" type="text" >
+									<input id="verifycode" name="verifycode" maxlength="4" maxlength="4" type="text" placeholder="验证码">
 									<span class="yanZ "><img id="verifyImg" src="${ufbDomain}/createImageservlet"+"?time="+(+new Date())" onclick="javascript:this.src=this.src+'?time='+(+new Date())" /></span>
 								</li>
                                 <li class="li04">
