--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -65,9 +65,7 @@
     <div class="container familyMyAccount">
 		<div class="myaccount-top">
             <p class="fr">
-                                                        银行卡已添加 <strong class="num-blue">$!{hft_family_trade_size}</strong>张
-                <a href="${ufbDomain}/family/setting/bankcard_index.htm" class="addMargin">查看全部</a>
-              <!--  <a id="addBankCard" href="#" isufbCard="$!{isufbCard}">+新卡</a>-->
+                <a href="${ufbDomain}/family/setting/card_index.htm" class="addMargin">我的银行卡</a>
             </p>
         </div>
 		<div class="myaccount">
