--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_update.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/card_update.vm
@@ -45,7 +45,6 @@
 	            autoHideScrollbar: false, //是否自动隐藏滚动条
 	            scrollInertia :0,//滚动延迟
 	            horizontalScroll : false//水平滚动条
-	
 	        });
 	   });
 	   
@@ -101,9 +100,14 @@
 		   			obj.find('font').text('对不起，银行卡号与所选银行不符！');
 		   			obj.css('display', 'inline');
 		   			return false;
+	   			}else{
+	   				//obj.parent().addClass('ok');
+					obj.parent().removeClass('error');
+		   			obj.find('font').html('&nbsp;');
+		   			obj.css('display', 'inline');
+		   			return true;
 	   			}
 	   		}
-	   		return true;
 	   }
 	   
 	   // 检查银行预留手机号
@@ -120,8 +124,13 @@
 				$("#bankmobile").next().css('display', 'inline');
 				$("#bankmobile").closest('li').addClass('error');
 				return false;
-			}
-			return true;
+			}else{
+		 		$("#bankmobile").next().find('font').html('&nbsp;');
+				$("#bankmobile").next().css('display', 'inline');
+				$("#bankmobile").closest('li').removeClass('error');
+				//$("#bankmobile").closest('li').addClass('ok');
+				return true;
+		 	}
 	   }
 	   
 	   // 检查验证码
@@ -157,10 +166,15 @@
 		});
 		
 		// 表单提交
-		$("#btn-submit").on("click",function(){
+		$("#submit").on("click",function(){
 			if(checkBankacco() && checkBankMobile() && checkMobileCode()){
 		 		$("#myform").submit();
 		 	}
+		});
+		
+		// 返回
+		$("#back").on("click",function(){
+			location = '${ufbDomain}/family/setting/card_index.htm'
 		});
 		
 		// 海富通银行鉴权
@@ -200,7 +214,7 @@
 				$("#btn-getMsgCode").val("重新发送"); 
 				$("#btn-getMsgCode").removeClass("off");
 				$("#btn-getMsgCode").removeAttr("disabled"); 
-				clearTimeout(countdown); 
+				clearTimeout(countDown); 
 			}else{
 				count--; 
 				setTimeout(countDown, 1000);
@@ -240,63 +254,66 @@
              </p>
         </div>
         <form id="myform" class="common-form bgFFF" method="post" action="${ufbDomain}/family/setting/card_result.htm">
-               <div class="panel">
-                    <ul class="safeInfo">
-                        <li>
-                            <span class="form-title">家长姓名</span>
-                            <input class="ipt-text input-text" type="text" value="">
-                            <span class="tips-normal" style="display: block;">王杰</span>
-                            <span class="tips-check"><i class="icon"></i>错误提示</span>
-                        </li>
-                        <li class="error">
-                            <span class="form-title">身份证号</span>
-                            <input class="ipt-idCard input-text" type="text" value="">
-                            <span class="tips-normal" style="display: block;">310109198008243410</span>
-                             <span class="tips-check"><i class="icon"></i>错误提示</span>
-                        </li>
-                    </ul>
-                    <ul class="safeInfo">
-                        <li class="anotherArea">
-                            <span class="form-title title-font">设置支付方式</span>
-                         <p>选择银行</p>
-                        </li>
-                        <li class="clearfix">
-                            <div class="input-select">
-                                <div class="bank bank-current"><img src="${staticDomain}/family/images/bank_${firstBank.bankno}.png"></div>
-                                <div class="input-options">
-                                    <div class="bank-list clearfix mb10" style="width: 620px;">
-                                        #foreach($bank in $ufbBankList)
-								        	<a bankno="${bank.bankno}" class="bank" style="width: 142px;" href="javascript:;">
-								        		<img src="${staticDomain}/family/images/bank_${bank.bankno}.png">
-								        	</a>
-								        #end
-                                    </div>
+            ${refreshTools.genInputHtml()}
+			<input id="bankno" name="bankno" type="hidden" value="${firstBank.bankno}">
+						
+           <div class="panel">
+                <ul class="safeInfo">
+                    <li>
+                        <span class="form-title">家长姓名</span>
+                        <input class="ipt-text input-text" type="text" style="background-color:#cbcbcb;" readonly="readonly" value="$!{custinfoVo.invnm}">
+                        <span class="tips-normal" style="display: none;"></span>
+                      	<span class="tips-check"><i class="icon"></i></span> 
+                    </li>
+                    <li>
+                        <span class="form-title">身份证号</span>
+                        <input class="ipt-idCardno input-text" type="text" style="background-color:#cbcbcb;" readonly="readonly" value="$!{custinfoVo.idno}" >
+                        <span class="tips-normal" style="display: none;"></span>
+                        <span class="tips-check"><i class="icon"></i></span>
+                    </li>
+                </ul>
+                <ul class="safeInfo">
+                    <li class="anotherArea">
+                        <span class="form-title title-font">设置支付方式</span>
+                     <p>选择银行</p>
+                    </li>
+                    <li class="clearfix">
+                        <div class="input-select">
+                            <div class="bank bank-current"><img src="${staticDomain}/family/images/bank_${firstBank.bankno}.png"></div>
+                            <div class="input-options">
+                                <div class="bank-list clearfix mb10 ufbCard" style="width: 620px;">
+                                    #foreach($bank in $ufbBankList)
+							        	<a bankno="${bank.bankno}" class="bank" style="width: 142px;" href="javascript:;">
+							        		<img src="${staticDomain}/family/images/bank_${bank.bankno}.png">
+							        	</a>
+							        #end
                                 </div>
                             </div>
-                            <span class="tips-normal"></span>
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
-                        </li>
-                    </ul>
-                    <ul class="safeInfo">
-                        <li class="cardNum">
-                           <span class="form-title">银行卡号</span>
-                               <div class="cardFormat" id="card2">
-                                   <input class="ipt-bankCard input-text ipt-focus" type="text">
-                               <div class="num" style="top: -31px; width: 220px;">&nbsp;</div></div>
-                           <span>仅支持借记卡，<a href="">银行卡要求。
-                           <div class="trip">
-                               <div>填写以你自己姓名开户的银行卡<br>
-                                   	 幼富通平台快捷缴费：共支持超过25家全国及地方银行借记卡<br>
-                                    	充值幼富宝（理财+缴费）目前共支持9家银行，仅限借记卡，需事先开通网银<b></b>
-                                </div>
-                            </div>
-                           </a></span>
-                           <p>此卡将设为默认缴费卡</p>
-                       </li>
-                       <li class="sureAddr"><b>请明确银行开户地点</b></li>
-                       <li class="Addr zIndex">
+                        </div>
+                        <span class="tips-normal"></span>
+                        <span class="tips-check"><i class="icon"></i>验证提示</span>
+                    </li>
+                </ul>
+                <ul class="safeInfo">
+                    <li class="cardNum">
+                       <span class="form-title">银行卡号</span>
+                       <div class="cardFormat" id="card2">
+                           <input class="ipt-bankCard input-text ipt-focus" maxlength="22"  type="text" id="bankacco" name="bankacco">
+                       </div>
+                       <span class="tips-check"><i class="icon"></i><font></font></span>
+                       <p>
+                       	         此卡默认缴费卡，仅支持借记卡，<a id="cardRequirement" href="javascript:;">绑卡须知</a>。
+                       </p>
+                       <div class="trip" style="display:none">
+                        	 填写以你自己姓名开户的银行卡<br>
+			                                                幼富通平台快捷缴费：共支持超过15家全国及地方银行借记卡<br>
+			                                                充值幼富宝（理财+缴费）目前共支持9家银行，仅限借记卡<b></b>
+                       </div>
+                   </li>
+                   <li class="sureAddr" style="display:none;"><b>请明确银行开户地点</b></li>
+                   <li class="Addr zIndex" style="display:none;">
                        <span class="form-title">地址</span>
-                       <div class="inputL">                               
+                       <div class="inputL">
                            <div class="inputS provinces">省份</div>
                            <div class="chose">
                                <ul>
@@ -319,38 +336,33 @@
                                    <li>四平市</li>
                                </ul>
                            </div>
-                       </div>                                     
-                       </li>
-                       <li>
-                           <span class="form-title">开户网点</span>
-                           <input class="ipt-bankCard input-text inputL" type="text" value="">
-                           <span class="tips-normal" style="display: block;">如：浦建路支行</span>
-                           <span>如果不明确开户网点，请拨打相应银行客服电话询问</span>                                   
-                       </li>                                    
-                    </ul>
-                    <ul class="safeInfo borderNone">
-                        <li>
-                            <span class="form-title">银行预留手机号码</span>
-                            <input class="ipt-idCard input-text" type="text" value="">
-                        </li>
-                       <li>
-                            <span class="form-title">验证码</span>
-                            <input class="ipt-phoneCode input-code" type="text" value="">
-                            <input class="input-button" type="button" value="获取验证码">
-                            <span class="tips-check"><i class="icon"></i>验证提示</span>
-                        </li>
-                         <li class="anotherArea anotherTips">
-                         <p>免费开通幼富宝服务，海富通基金（海富通货币）</p>
-                         <p class="fontP">点击下一步表示同意<a href="javascript:;" id="ufbAgreement">《幼富宝服务协议》 </a><a href="javascript:;" id="hftAgreement">《海富通基金管理有限公司网上交易直销自助式前台服务协议》</a></p>
-                        </li>
-                        <li>
-                            <input class="input-button btnB" type="submit" value="返回" onclick="window.open('createAccount_04.html')"> 
-                            <input class="input-button btnB" type="submit" value="提交" onclick="window.open('createAccount_04.html')"> 
-                            <p class="fontP"><a href="javascript:;" id="ufbFast">《幼富宝快捷支付服务协议》</a><a href="javascript:;" id="uftName">《幼富通实名认证服务协议》</a></p>                
-                        </li>
-                    </ul>
-                </div>
-           </form>    
+                       </div>
+                   </li>
+                </ul>
+                <ul class="safeInfo borderNone">
+                    <li>
+                        <span class="form-title">银行预留手机号码</span>
+                        <input class="ipt-phoneNum input-text" type="text" id="bankmobile" name="bankmobile" maxlength="11">
+                       	<span class="tips-check"><i class="icon"></i><font></font></span>
+                    </li>
+                   	<li>
+                        <span class="form-title">验证码</span>
+                        <input class="ipt-phoneCode input-code" type="text" maxlength="6" id="mobileautocode" name="mobileautocode" >
+                        <input id="btn-getMsgCode" class="input-button" type="button" value="获取验证码">
+                        <span class="tips-check"><i class="icon"></i><font></font></span>
+                    </li>
+                    <li class="anotherArea anotherTips">
+	                    <p>免费开通幼富宝服务，海富通基金（海富通货币）</p>
+	                    <p class="fontP">点击下一步表示同意<a href="javascript:;" id="ufbAgreement">《幼富宝服务协议》 </a><a href="javascript:;" id="hftAgreement">《海富通基金管理有限公司网上交易直销自助式前台服务协议》</a></p>
+                    </li>
+                    <li>
+                        <input id="back"class="input-button btnB" type="button" value="返回"> 
+                        <input id="submit" class="input-button btnB" type="button" value="提交"> 
+                        <p class="fontP"><a href="javascript:;" id="uftName">《幼富通实名认证服务协议》</a></p>                
+                    </li>
+                </ul>
+            </div>
+       </form>    
     </div>
 </div>
 
